// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stepper > renders the Stepper component with a completed step 1`] = `
<div>
  <div
    class="duk-stepper"
    role="tablist"
  >
    <div
      class="duk-stepper__progress_bar"
    >
      <div
        class="duk-stepper__progress_filler"
        style="width: 100%;"
      />
    </div>
     
    <div
      class="duk-stepper__steps"
    >
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step duk-stepper__step--processed"
      />
      <div
        aria-disabled="true"
        aria-selected="true"
        class="duk-stepper__step duk-stepper__step--processed"
      />
    </div>
  </div>
  <!--&lt;Stepper&gt;-->
</div>
`;

exports[`Stepper > renders the Stepper component with five steps 1`] = `
<div>
  <div
    class="duk-stepper"
    role="tablist"
  >
    <div
      class="duk-stepper__progress_bar"
    >
      <div
        class="duk-stepper__progress_filler"
        style="width: 0%;"
      />
    </div>
     
    <div
      class="duk-stepper__steps"
    >
      <div
        aria-disabled="true"
        aria-selected="true"
        class="duk-stepper__step duk-stepper__step--processed"
      />
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step"
      />
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step"
      />
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step"
      />
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step"
      />
    </div>
  </div>
  <!--&lt;Stepper&gt;-->
</div>
`;

exports[`Stepper > renders the Stepper component with five steps, with the third one being active, and the first two – completed 1`] = `
<div>
  <div
    class="duk-stepper"
    role="tablist"
  >
    <div
      class="duk-stepper__progress_bar"
    >
      <div
        class="duk-stepper__progress_filler"
        style="width: 75%;"
      />
    </div>
     
    <div
      class="duk-stepper__steps"
    >
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step duk-stepper__step--processed"
      />
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step duk-stepper__step--processed"
      />
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step duk-stepper__step--processed"
      />
      <div
        aria-disabled="true"
        aria-selected="true"
        class="duk-stepper__step duk-stepper__step--processed"
      />
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step"
      />
    </div>
  </div>
  <!--&lt;Stepper&gt;-->
</div>
`;

exports[`Stepper > renders the Stepper component with two steps 1`] = `
<div>
  <div
    class="duk-stepper"
    role="tablist"
  >
    <div
      class="duk-stepper__progress_bar"
    >
      <div
        class="duk-stepper__progress_filler"
        style="width: 0%;"
      />
    </div>
     
    <div
      class="duk-stepper__steps"
    >
      <div
        aria-disabled="true"
        aria-selected="true"
        class="duk-stepper__step duk-stepper__step--processed"
      />
      <div
        aria-disabled="true"
        aria-selected="false"
        class="duk-stepper__step"
      />
    </div>
  </div>
  <!--&lt;Stepper&gt;-->
</div>
`;
